aggiunti contenuti main

--- a/index.html
+++ b/index.html
@@ -53,59 +53,59 @@
 
     <main>
         <section class="section-size">
-            <div class="column image">
-                <h1>Immagine</h1>
+            <div class="column image one">
+                <!-- <h1>Immagine</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
                     rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>
+                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p> -->
             </div>
             <div class="column text">
-                <h1>Testo</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
-                    rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>
+                <h1 class="text head">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                <p class="text par">I server Discord sono organizzati in canali tematici in cui puoi collaborare,
+                    condividere o
+                    semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
 
 
-        <section class="section-size">
+        <section class="section-size wave">
 
             <div class="column text">
-                <h1>Testo</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
-                    rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>
+                <h1 class="text head">Dove trovarsi é facile</h1>
+                <p class="text par">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server
+                    possono vedere che sei l&igrave; e unirsi istantaneamente senza dover chiamare.</p>
             </div>
-            <div class="column image">
-                <h1>Immagine</h1>
+            <div class="column image two">
+                <!-- <h1>Immagine</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
                     rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>
+                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p> -->
             </div>
         </section>
 
         <section class="section-size">
-            <div class="column image">
-                <h1>Immagine</h1>
+            <div class="column image three">
+                <!--<h1>Immagine</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
                     rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>
+                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>-->
             </div>
             <div class="column text">
-                <h1>Testo</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
-                    rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>
+                <h1 class="text head">Da pochi a un fandom</h1>
+                <p class="text par">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e
+                    accesso ai membri
+                    personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
             </div>
         </section>
 
         <section class="section-centered">
-            <h1 class="centered">Lorem Lorem Lorem Lorem Lorem Lorem</h1>
-            <p class="centered">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat
+            <h1 class="centered">Tecnologia affidabile per tenersi in contatto</h1>
+            <p class="centered">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa
+                stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno
+                con la condivisione schermo.</p>
+            <div class="big-image"></div>
+            <!--<p class="centered">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat
                 lectus, non
-                rutrum lectus fermentum ac.</p>
-            <p class="centered">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat
-                lectus, non
                 rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
                 pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.Lorem ipsum dolor sit
                 amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
@@ -116,8 +116,8 @@
                 pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.Lorem ipsum dolor sit
                 amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
                 rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>
-            <h1 class="centered">Lorem Lorem Lorem</h1>
+                pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>-->
+            <h1 class="centered">Pronto a iniziare la tua avventura?</h1>
 
             <button class=" centered mac purple">&#11107 Scarica per Mac</button>
         </section>
