aggiunti contenuti finali main e contenuti footer (da rivedere ancora i posizionamenti)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Fontawesome 6.5.2 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Discord</title>
 </head>
 
@@ -54,10 +58,6 @@
     <main>
         <section class="section-size">
             <div class="column image one">
-                <!-- <h1>Immagine</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
-                    rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p> -->
             </div>
             <div class="column text">
                 <h1 class="text head">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
@@ -71,24 +71,16 @@
         <section class="section-size wave">
 
             <div class="column text">
-                <h1 class="text head">Dove trovarsi é facile</h1>
+                <h1 class="text head head-2">Dove trovarsi é facile</h1>
                 <p class="text par">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server
                     possono vedere che sei l&igrave; e unirsi istantaneamente senza dover chiamare.</p>
             </div>
             <div class="column image two">
-                <!-- <h1>Immagine</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
-                    rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p> -->
             </div>
         </section>
 
         <section class="section-size">
             <div class="column image three">
-                <!--<h1>Immagine</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
-                    rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                    pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>-->
             </div>
             <div class="column text">
                 <h1 class="text head">Da pochi a un fandom</h1>
@@ -104,22 +96,9 @@
                 stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno
                 con la condivisione schermo.</p>
             <div class="big-image"></div>
-            <!--<p class="centered">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pulvinar consequat
-                lectus, non
-                rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.Lorem ipsum dolor sit
-                amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
-                rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.Lorem ipsum dolor sit
-                amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
-                rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.Lorem ipsum dolor sit
-                amet, consectetur adipiscing elit. Curabitur pulvinar consequat lectus, non
-                rutrum lectus fermentum ac. Vivamus vitae sodales purus. Nam tincidunt mattis ante sit amet
-                pellentesque. Praesent vitae purus gravida, finibus augue ut, pulvinar tortor.</p>-->
-            <h1 class="centered">Pronto a iniziare la tua avventura?</h1>
+            <h1 class="centered below">Pronto a iniziare la tua avventura?</h1>
 
-            <button class=" centered mac purple">&#11107 Scarica per Mac</button>
+            <button class="mac purple">&#11107 Scarica per Mac</button>
         </section>
 
 
@@ -130,24 +109,28 @@
 
 
         <nav class="nav-footer">
-            <ul class="big-purple-text">
-                <li>Lorem ipsum dolor sit amet</li>
-                <li>Lorem</li>
-                <li>icone icone icone</li>
+            <ul class="ul-footer">
+                <li class="big purple-text">Il tuo posto per parlare</li>
+                <li><img src="./img/ita.png" alt="bandiera" width="20" height="15"> Italiano <select></select></li>
+                <li><i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </li>
             </ul>
 
 
             <ul class="ul-footer">
-                <li>Prodotto</li>
+                <li class="purple-text">Prodotto</li>
                 <li>Scarica</li>
-                <li>Perche Discord</li>
+                <li>Perché Discord</li>
                 <li>Nitro</li>
                 <li>Sicurezza</li>
                 <li>Assistenza</li>
             </ul>
 
             <ul class="ul-footer">
-                <li>Compagnia</li>
+                <li class="purple-text">Compagnia</li>
                 <li>Chi siamo</li>
                 <li>Lavora con noi</li>
                 <li>Marchio</li>
@@ -156,8 +139,8 @@
             </ul>
 
             <ul class="ul-footer">
-                <li>Scarica</li>
-                <li>Perche Discord</li>
+                <li class="purple-text">Risorse</li>
+                <li>Perché Discord</li>
                 <li>Nitro</li>
                 <li>Sicurezza</li>
                 <li>Assistenza</li>
@@ -168,9 +151,9 @@
                 <li>Assistenza</li>
             </ul>
             <ul class="ul-footer">
-                <li>Norme</li>
+                <li class="purple-text">Norme</li>
                 <li>Scarica</li>
-                <li>Perche Discord</li>
+                <li>Perché Discord</li>
                 <li>Nitro</li>
                 <li>Sicurezza</li>
                 <li>Assistenza</li>
@@ -181,7 +164,7 @@
 
 
         <section class="sign-up">
-            <h1>logo</h1>
+            <h1><img src="./img/logo.svg" alt="logo discord"></h1>
             <button class="registrati">Registrati</button>
         </section>
 
